# batchman

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: python-package.yml
docs/source/: conf.py  index.rst
docs/source/api/: batchman.rst
examples/: read_results.py  read_stories_generation_exxa.py  stories_generation.py  stories_generation_anthropic.py  stories_generation_exxa.py  stories_generation_load.py  stories_generation_multi_models.py  stories_generation_multi_provider.py  stories_generation_openai.py
src/batchman/: __init__.py  batch_interfaces.py  batchman.py  cli.py
src/batchman/models/: __init__.py  batch.py  dataclasses.py  enums.py  provider_config.py  request.py  result.py
src/batchman/providers/: __init__.py  anthropic.py  base.py  config_store.py  exxa.py  openai.py  registry.py
src/batchman/utils/: __init__.py  common.py  envs.py  files.py  logging.py  ui.py
tests/: auto_tests_manual_init.py  test_batcher.py  test_config_store.py  test_doc.py  test_load.py  test_misc.py
tests/manual_tests/: stories_generation_cancel.py  stories_generation_cancel_anthropic.py  stories_generation_cancel_exxa.py
